edit the image path and add the image

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     function verImagen() {
       const imagenContainer = document.getElementById('imagenContainer');
       const image = document.createElement('img');
-      image.src = '/see-image/gard/?lan=esp';
+      image.src = '/see-image/gardfield';
       imagenContainer.appendChild(image);
     }
   </script>
